.provarCaches/00D6C0000000xA6UAI/objects/sked__Debug_Log__c.object
<CustomObject>
    <fields>
        <fullName>sked__Message__c</fullName>
        <label>Message</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked__Summary__c</fullName>
        <label>Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>sked__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Debug Log</fullName>
                </value>
                <value>
                    <fullName>Error Log</fullName>
                </value>
                <value>
                    <fullName>Alert Log</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>sked__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Debug_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Debug Log</label>
    <listViews>
        <fullName>sked__All</fullName>
        <columns>NAME</columns>
        <columns>sked__Type__c</columns>
        <columns>sked__Summary__c</columns>
        <columns>sked__Message__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Debug Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>